--- a/frontend/src/app/components/chat/chat.scss
+++ b/frontend/src/app/components/chat/chat.scss
@@ -2,6 +2,10 @@
   height: calc(100vh - 70px);
 
   .char-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 100%;
     height: calc(100vh - 126px);
     overflow-y: scroll;
   }
