--- a/frontend/src/app/components/chat/messages/messages.scss
+++ b/frontend/src/app/components/chat/messages/messages.scss
@@ -1,8 +1,19 @@
 .wrapper {
   width: 100%;
   display: flex;
+  align-items: center;
+
   &.blue {
+
     justify-content: flex-end;
+  }
+
+  .avatar {
+    margin: 0 10px 0 16px;
+
+    .icon-user {
+      font-size: 40px;
+    }
   }
 }
 
