--- a/frontend/src/app/components/chat/messages/messages.scss
+++ b/frontend/src/app/components/chat/messages/messages.scss
@@ -20,7 +20,7 @@
 .message-type-blue {
   margin: 10px;
   float: right;
-  background-color: blue;
+  background-color: #00A0E3;
   color: white;
   padding: 10px;
   border-radius: 5px;
@@ -29,8 +29,8 @@
 .message-type-gray {
   margin: 10px;
   float: left;
-  background-color: lightgray;
-  color: black;
+  background-color: #E2E2E2;
+  color: #151515;
   padding: 10px;
   border-radius: 5px;
 }
