--- a/frontend/src/app/components/chat/messages/messages.scss
+++ b/frontend/src/app/components/chat/messages/messages.scss
@@ -18,7 +18,7 @@
 }
 
 .message-type-blue {
-  margin: 10px;
+  margin: 5px 10px 5px 10px;
   float: right;
   background-color: #00A0E3;
   color: white;
@@ -27,7 +27,8 @@
 }
 
 .message-type-gray {
-  margin: 10px;
+  font-size: 12px;
+  margin: 5px 10px 5px 10px;
   float: left;
   background-color: #E2E2E2;
   color: #151515;
