Revert "Merge branch 'develop-frontend' of https://github.com/daubaris/vugle into develop-frontend"
This reverts commit 9becff640650b68cde423a005de05056e50402a8, reversing
changes made to acf0c168b87b9fe631c94df9f5c53528c6e57609.

--- a/frontend/src/app/components/chat/chat.scss
+++ b/frontend/src/app/components/chat/chat.scss
@@ -1,12 +1,12 @@
 .chat {
-  height: calc(100vh - 50px);
-  position: relative;
+  height: calc(100vh - 70px);
 
   .char-area {
-    position: absolute;
-    bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     width: 100%;
-    max-height: calc(100vh - 111px);
-    overflow: scroll;
+    height: calc(100vh - 126px);
+    overflow-y: scroll;
   }
 }
