--- a/frontend/src/app/components/chat/messages/messages.scss
+++ b/frontend/src/app/components/chat/messages/messages.scss
@@ -2,7 +2,6 @@
   width: 100%;
   display: flex;
   align-items: center;
-  min-height: 50px;
 
   &.blue {
 
@@ -19,7 +18,7 @@
 }
 
 .message-type-blue {
-  margin: 5px 10px 5px 10px;
+  margin: 10px;
   float: right;
   background-color: #00A0E3;
   color: white;
@@ -28,8 +27,7 @@
 }
 
 .message-type-gray {
-  font-size: 12px;
-  margin: 5px 10px 5px 10px;
+  margin: 10px;
   float: left;
   background-color: #E2E2E2;
   color: #151515;
