--- a/frontend/src/app/components/chat/messages/messages.scss
+++ b/frontend/src/app/components/chat/messages/messages.scss
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  min-height: 50px;
 
   &.blue {
 
@@ -18,7 +19,7 @@
 }
 
 .message-type-blue {
-  margin: 10px;
+  margin: 5px 10px 5px 10px;
   float: right;
   background-color: #00A0E3;
   color: white;
@@ -28,7 +29,8 @@
 }
 
 .message-type-gray {
-  margin: 10px;
+  font-size: 12px;
+  margin: 5px 10px 5px 10px;
   float: left;
   color: #151515;
   padding: 10px;
