--- a/frontend/src/app/components/chat/suggestion-bar/suggestions-bar.scss
+++ b/frontend/src/app/components/chat/suggestion-bar/suggestions-bar.scss
@@ -1,5 +1,8 @@
 .suggestion-bar {
   display: flex;
-  overflow-x: scroll;
+  overflow: scroll;
   min-height: 40px;
+  position: absolute;
+  bottom: 10px;
+  max-width: 100%;
 }
