--- a/frontend/src/app/components/chat/messages/messages.scss
+++ b/frontend/src/app/components/chat/messages/messages.scss
@@ -23,6 +23,7 @@
   background-color: #00A0E3;
   color: white;
   padding: 10px;
+  font-size: 12px;
   border-radius: 15px;
   border-bottom-right-radius: 0;
 }
@@ -32,6 +33,7 @@
   float: left;
   color: #151515;
   padding: 10px;
+  font-size: 12px;
   border-radius: 15px;
   border-bottom-left-radius: 0;
   border: 1px solid #E2E2E2;
