--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -11,6 +11,15 @@
   }
 }
 
+::-webkit-scrollbar {
+  width: 0px;  /* remove scrollbar space */
+  background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+
 .app {
   min-height: 100vh;
 }
