--- a/frontend/src/app/components/chat/messages/messages.scss
+++ b/frontend/src/app/components/chat/messages/messages.scss
@@ -40,3 +40,11 @@
   border-bottom-left-radius: 0;
   border: 1px solid #E2E2E2;
 }
+
+.show-results {
+  text-align: center;
+}
+
+.show-results div {
+  margin-bottom: 30px;
+}
