--- a/frontend/src/app/components/chat/messages/messages.scss
+++ b/frontend/src/app/components/chat/messages/messages.scss
@@ -8,13 +8,8 @@
 
     justify-content: flex-end;
   }
-
   .avatar {
-    margin: 0 10px 0 16px;
-
-    .icon-user {
-      font-size: 40px;
-    }
+    padding-left: 20px;
   }
 }
 
