--- a/frontend/src/app/components/chat/suggestions-bubble/suggestions-bubble.scss
+++ b/frontend/src/app/components/chat/suggestions-bubble/suggestions-bubble.scss
@@ -7,7 +7,7 @@
   background-color: #00A0E3; 
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.33);
   &.disabled {
-    background: rgba(gray, 0.1);
+    background: rgba(#00A0E3, 0.33);
   }
 }
 
