--- a/frontend/src/app/components/chat/result-bubble/result-bubble.scss
+++ b/frontend/src/app/components/chat/result-bubble/result-bubble.scss
@@ -8,12 +8,16 @@
   flex-wrap: wrap;
   flex: 1 0 100%;
   position: relative;
-  width: inherit;
   object-fit: cover;
   color: #151515;
   border-radius: 15px;
   border-bottom-left-radius: 0;
   max-width: 300px;
+
+  @media only screen and (max-width: 600px) {
+    width: 300px;
+    max-width: calc(100% - 80px);
+  }
 
   .title {
     flex: 1 0 100%;
